# BSU-System-Programming

./: README.md
Lab1/: README.md
Lab1/scripts/: task3Лаптёнок12  task4Лаптёнок12  task5Лаптёнок129  task6Лаптёнок12  timelog3Лаптёнок12  timelog4Лаптёнок12  timelog5Лаптёнок129  timelog6Лаптёнок12
Lab2/: README.md
Lab2/scripts/: task1Лаптёнок12  task2Лаптёнок12  task3Лаптёнок12  timelog1Лаптёнок12  timelog2Лаптёнок12  timelog3Лаптёнок12
Lab3/: README.md
Lab3/awk-examples/: colours.csv  list_students  log.txt  output.txt
Lab3/sed-examples/: appends  books  insert  records
Lab3/src/: README.md  task1Лаптёнок12  task2Лаптёнок12  task3Лаптёнок12  task4Лаптёнок12  task5Лаптёнок12  timelog1Лаптёнок12  timelog2Лаптёнок12  timelog3Лаптёнок12  timelog4Лаптёнок12  timelog5Лаптёнок12
Lab3/task2.4/: animals.sed  animals_test  history  history-copy  task2.awk  task3.awk
Lab3/task2.5/: full_list_spec.txt  laptyonok.txt  laptyonok1.txt  laptyonok2.txt  laptyonok3.txt  laptyonok4.txt  laptyonok5.txt  output56.txt  short_list_spec.txt  zadacha55.txt
Lab3/task31/: errors  file.my  file.my.sorted  grep_names  names  output  packages1.trfile.txt  packages1.txt  trfile.txt  typedin.txt
Lab4/: README.md
Lab4/labrabota4/: task1Лаптёнок12  task2Лаптёнок12  (+6 more)
Lab5/: README.md
Lab5/task2_dynamic/: Makefile.am  README.md  configure.ac
Lab5/task2_dynamic/.github/workflows/: build.yml
Lab5/task2_dynamic/docs/: res.txt  result.txt
Lab5/task2_dynamic/include/: replacing.h
Lab5/task2_dynamic/src/: libreplacing.c  main.c
Lab6/: README.md
Lab7/: README.md
(+50 files in other folders)
