# Конфигурационный файл для автоматической генерации Makefile

AC_INIT([prog], [1.0]) # Установка имени программы и версии
AM_INIT_AUTOMAKE # Инициализация Automake

# Проверка наличия необходимых инструментов
AC_PROG_CC
AC_PROG_LIBTOOL

# Указание директорий с исходным кодом
AC_CONFIG_SRCDIR([src])

# Создание файла Makefile
AC_CONFIG_FILES([Makefile])

AC_OUTPUT
